# minizip

./: CMakeLists.txt  FindMiniZip.cmake  LICENSE  README.md  ioapi.h  minizip.pc.in  unzip.c
